// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ObjectPage IconTabBar Mode 1`] = `
<div
  class="ObjectPage-objectPage-0 sapScrollBar ObjectPage-iconTabBarMode-0"
  data-component-name="ObjectPage"
>
  <header
    aria-roledescription="Object Page header"
    class="ObjectPage-header-0"
    role="banner"
    style="padding-right: 12px;"
  >
    <span
      class="ObjectPage-actions-0"
    >
      <ui5-button
        design="Default"
      >
        Action
      </ui5-button>
    </span>
    <header
      class="ObjectPage-titleBar-0"
    >
      <div
        class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsCenter-0 FlexBox-flexWrapNoWrap-0"
      >
        <div
          class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionColumn-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsStretch-0 FlexBox-flexWrapNoWrap-0 ObjectPage-container-0"
        >
          <div
            class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsBaseline-0 FlexBox-flexWrapNoWrap-0"
          >
            <ui5-title
              class="ObjectPage-title-0"
              level="H3"
            >
              Fiori Object Page Title
            </ui5-title>
            <ui5-label
              class="ObjectPage-subTitle-0"
            >
              Sub Title
            </ui5-label>
            <div
              class="ObjectPage-keyInfos-0"
            />
          </div>
        </div>
      </div>
    </header>
  </header>
  <div
    class="ObjectPage-contentHeader-0"
  >
    <span
      class="ObjectPage-headerCustomContent-0"
    >
      <div
        style="display: flex; flex-direction: column;"
      >
        <ui5-link
          design="Default"
          href="https://www.sap.com"
        >
          www.myurl.com
        </ui5-link>
        <span
          class="Text-text-0"
        >
          Address 1
        </span>
        <span
          class="Text-text-0"
        >
          Address 2
        </span>
        <span
          class="Text-text-0"
        >
          Address 3
        </span>
      </div>
    </span>
  </div>
  <section
    class="ObjectPage-anchorBar-0"
    role="navigation"
    style="top: 0px;"
  >
    <ui5-tabcontainer
      collapsed="true"
      fixed="true"
      show-overflow="true"
      tab-layout="Standard"
      tabs-placement="Top"
    >
      <ui5-tab
        data-index="0"
        data-section-id="1"
        selected="true"
        semantic-color="Default"
        text="Test 1"
      />
      <ui5-tab
        data-index="1"
        data-section-id="2"
        semantic-color="Default"
        text="Test 2"
      />
      <ui5-tab
        data-index="2"
        data-section-id="3"
        semantic-color="Default"
        text="Test 3"
      />
      <ui5-tab
        data-index="3"
        data-section-id="4"
        semantic-color="Default"
        text="Test 4"
      />
      <ui5-tab
        data-index="4"
        data-section-id="5"
        semantic-color="Default"
        text="Test 5"
      />
    </ui5-tabcontainer>
    <ui5-button
      class="ObjectPageAnchorBar-anchorBarActionButton-0 ObjectPageAnchorBar-anchorBarActionButtonExpandable-0"
      data-ui5wcr-object-page-header-action=""
      design="Default"
      icon="slim-arrow-down"
    />
    <ui5-popover
      horizontal-align="Center"
      no-arrow="true"
      placement-type="Bottom"
      vertical-align="Center"
    >
      <ui5-list
        mode="None"
        separators="All"
      />
    </ui5-popover>
  </section>
  <section
    data-component-name="ObjectPageSection"
    id="ObjectPageSection-1"
    role="region"
  >
    <div
      class="ObjectPageSection-header-0"
      role="heading"
    >
      <div
        class="ObjectPageSection-title-0 ObjectPageSection-uppercase-0"
      >
        Test 1
      </div>
    </div>
    <div
      class="ObjectPageSection-sectionContent-0"
    >
      <div
        class="ObjectPageSection-sectionContentInner-0"
      >
        <ui5-label>
          My Content 1
        </ui5-label>
      </div>
    </div>
  </section>
</div>
`;

exports[`ObjectPage Just Some Sections 1`] = `
<div
  class="ObjectPage-objectPage-0 sapScrollBar ObjectPage-iconTabBarMode-0"
  data-component-name="ObjectPage"
>
  <header
    aria-roledescription="Object Page header"
    class="ObjectPage-header-0"
    role="banner"
    style="padding-right: 12px;"
  >
    <span
      class="ObjectPage-actions-0"
    />
    <header
      class="ObjectPage-titleBar-0"
    >
      <div
        class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsCenter-0 FlexBox-flexWrapNoWrap-0"
      >
        <div
          class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionColumn-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsStretch-0 FlexBox-flexWrapNoWrap-0 ObjectPage-container-0"
        >
          <div
            class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsBaseline-0 FlexBox-flexWrapNoWrap-0"
          >
            <ui5-title
              class="ObjectPage-title-0"
              level="H3"
            />
            <ui5-label
              class="ObjectPage-subTitle-0"
            />
            <div
              class="ObjectPage-keyInfos-0"
            />
          </div>
        </div>
      </div>
    </header>
  </header>
  <div
    class="ObjectPage-contentHeader-0"
  />
  <section
    class="ObjectPage-anchorBar-0"
    role="navigation"
    style="top: 0px;"
  >
    <ui5-tabcontainer
      collapsed="true"
      fixed="true"
      show-overflow="true"
      tab-layout="Standard"
      tabs-placement="Top"
    >
      <ui5-tab
        data-index="0"
        data-section-id="1"
        selected="true"
        semantic-color="Default"
      />
      <ui5-tab
        data-index="1"
        data-section-id="2"
        semantic-color="Default"
      />
    </ui5-tabcontainer>
    <ui5-popover
      horizontal-align="Center"
      no-arrow="true"
      placement-type="Bottom"
      vertical-align="Center"
    >
      <ui5-list
        mode="None"
        separators="All"
      />
    </ui5-popover>
  </section>
  <section
    data-component-name="ObjectPageSection"
    id="ObjectPageSection-1"
    role="region"
  >
    <div
      class="ObjectPageSection-header-0"
      role="heading"
    >
      <div
        class="ObjectPageSection-title-0 ObjectPageSection-uppercase-0"
      />
    </div>
    <div
      class="ObjectPageSection-sectionContent-0"
    >
      <div
        class="ObjectPageSection-sectionContentInner-0"
      >
        Test
      </div>
    </div>
  </section>
</div>
`;

exports[`ObjectPage Key Infos 1`] = `
<div
  class="ObjectPage-objectPage-0 sapScrollBar"
  data-component-name="ObjectPage"
>
  <header
    aria-roledescription="Object Page header"
    class="ObjectPage-header-0"
    role="banner"
    style="padding-right: 12px;"
  >
    <span
      class="ObjectPage-actions-0"
    />
    <header
      class="ObjectPage-titleBar-0"
    >
      <div
        class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsCenter-0 FlexBox-flexWrapNoWrap-0"
      >
        <div
          class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionColumn-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsStretch-0 FlexBox-flexWrapNoWrap-0 ObjectPage-container-0"
        >
          <div>
            <ui5-link
              design="Default"
              href="PathSegment1"
            >
              Path1
            </ui5-link>
            <ui5-label
              style="margin: 0px 0.25rem;"
            >
              /
            </ui5-label>
            <ui5-link
              design="Default"
              href="PathSegment2"
            >
              Path2
            </ui5-link>
            <ui5-label
              style="margin: 0px 0.25rem;"
            >
              /
            </ui5-label>
            <ui5-link
              design="Default"
              href="PathSegment3"
            />
          </div>
          <div
            class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsBaseline-0 FlexBox-flexWrapNoWrap-0"
          >
            <ui5-title
              class="ObjectPage-title-0"
              level="H3"
            />
            <ui5-label
              class="ObjectPage-subTitle-0"
            />
            <div
              class="ObjectPage-keyInfos-0"
            >
              <div>
                <ui5-title
                  level="H5"
                >
                  Key Info 1
                </ui5-title>
                <span
                  class="Text-text-0"
                >
                  Value 1
                </span>
              </div>
              <div>
                <ui5-title
                  level="H5"
                >
                  Key Info 2
                </ui5-title>
                <span
                  class="Text-text-0"
                >
                  Value 2
                </span>
              </div>
              <div>
                <ui5-title
                  level="H5"
                >
                  Key Info 3
                </ui5-title>
                <span
                  class="Text-text-0"
                >
                  Value 3
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </header>
  </header>
  <div
    class="ObjectPage-contentHeader-0"
  />
  <section
    class="ObjectPage-anchorBar-0"
    role="navigation"
    style="top: 0px;"
  >
    <ui5-tabcontainer
      collapsed="true"
      fixed="true"
      show-overflow="true"
      tab-layout="Standard"
      tabs-placement="Top"
    >
      <ui5-tab
        data-index="0"
        data-section-id="1"
        selected="true"
        semantic-color="Default"
      />
      <ui5-tab
        data-index="1"
        data-section-id="2"
        semantic-color="Default"
      />
    </ui5-tabcontainer>
    <ui5-popover
      horizontal-align="Center"
      no-arrow="true"
      placement-type="Bottom"
      vertical-align="Center"
    >
      <ui5-list
        mode="None"
        separators="All"
      />
    </ui5-popover>
  </section>
  <section
    data-component-name="ObjectPageSection"
    id="ObjectPageSection-1"
    role="region"
  >
    <div
      class="ObjectPageSection-header-0"
      role="heading"
    >
      <div
        class="ObjectPageSection-title-0 ObjectPageSection-uppercase-0"
      />
    </div>
    <div
      class="ObjectPageSection-sectionContent-0"
    >
      <div
        class="ObjectPageSection-sectionContentInner-0"
      >
        Test
      </div>
    </div>
  </section>
  <section
    data-component-name="ObjectPageSection"
    id="ObjectPageSection-2"
    role="region"
  >
    <div
      class="ObjectPageSection-header-0"
      role="heading"
    >
      <div
        class="ObjectPageSection-title-0 ObjectPageSection-uppercase-0"
      />
    </div>
    <div
      class="ObjectPageSection-sectionContent-0"
    >
      <div
        class="ObjectPageSection-sectionContentInner-0"
      >
        Test 2
      </div>
    </div>
  </section>
</div>
`;

exports[`ObjectPage No Header 1`] = `
<div
  class="ObjectPage-objectPage-0 sapScrollBar ObjectPage-noHeader-0"
  data-component-name="ObjectPage"
>
  <header
    aria-roledescription="Object Page header"
    class="ObjectPage-header-0"
    role="banner"
    style="padding-right: 12px;"
  >
    <span
      class="ObjectPage-actions-0"
    />
    <header
      class="ObjectPage-titleBar-0"
    >
      <div
        class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsCenter-0 FlexBox-flexWrapNoWrap-0"
      >
        <div
          class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionColumn-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsStretch-0 FlexBox-flexWrapNoWrap-0 ObjectPage-container-0"
        >
          <div
            class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsBaseline-0 FlexBox-flexWrapNoWrap-0"
          >
            <ui5-title
              class="ObjectPage-title-0"
              level="H3"
            />
            <ui5-label
              class="ObjectPage-subTitle-0"
            />
            <div
              class="ObjectPage-keyInfos-0"
            />
          </div>
        </div>
      </div>
    </header>
  </header>
  <div
    class="ObjectPage-contentHeader-0"
  />
  <section
    class="ObjectPage-anchorBar-0"
    role="navigation"
    style="top: 0px;"
  >
    <ui5-tabcontainer
      collapsed="true"
      fixed="true"
      show-overflow="true"
      tab-layout="Standard"
      tabs-placement="Top"
    >
      <ui5-tab
        data-index="0"
        data-section-id="1"
        semantic-color="Default"
      />
      <ui5-tab
        data-index="1"
        data-section-id="2"
        selected="true"
        semantic-color="Default"
      />
    </ui5-tabcontainer>
    <ui5-popover
      horizontal-align="Center"
      no-arrow="true"
      placement-type="Bottom"
      vertical-align="Center"
    >
      <ui5-list
        mode="None"
        separators="All"
      />
    </ui5-popover>
  </section>
  <section
    data-component-name="ObjectPageSection"
    id="ObjectPageSection-1"
    role="region"
  >
    <div
      class="ObjectPageSection-header-0"
      role="heading"
    >
      <div
        class="ObjectPageSection-title-0 ObjectPageSection-uppercase-0"
      />
    </div>
    <div
      class="ObjectPageSection-sectionContent-0"
    >
      <div
        class="ObjectPageSection-sectionContentInner-0"
      >
        Test
      </div>
    </div>
  </section>
  <section
    data-component-name="ObjectPageSection"
    id="ObjectPageSection-2"
    role="region"
  >
    <div
      class="ObjectPageSection-header-0"
      role="heading"
    >
      <div
        class="ObjectPageSection-title-0 ObjectPageSection-uppercase-0"
      />
    </div>
    <div
      class="ObjectPageSection-sectionContent-0"
    >
      <div
        class="ObjectPageSection-sectionContentInner-0"
      >
        Test 2
      </div>
    </div>
  </section>
</div>
`;

exports[`ObjectPage Not crashing with 0 sections 1`] = `
<div
  class="ObjectPage-objectPage-0 sapScrollBar ObjectPage-iconTabBarMode-0"
  data-component-name="ObjectPage"
>
  <header
    aria-roledescription="Object Page header"
    class="ObjectPage-header-0"
    role="banner"
    style="padding-right: 12px;"
  >
    <span
      class="ObjectPage-actions-0"
    />
    <header
      class="ObjectPage-titleBar-0"
    >
      <div
        class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsCenter-0 FlexBox-flexWrapNoWrap-0"
      >
        <div
          class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionColumn-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsStretch-0 FlexBox-flexWrapNoWrap-0 ObjectPage-container-0"
        >
          <div
            class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsBaseline-0 FlexBox-flexWrapNoWrap-0"
          >
            <ui5-title
              class="ObjectPage-title-0"
              level="H3"
            />
            <ui5-label
              class="ObjectPage-subTitle-0"
            />
            <div
              class="ObjectPage-keyInfos-0"
            />
          </div>
        </div>
      </div>
    </header>
  </header>
  <div
    class="ObjectPage-contentHeader-0"
  />
  <section
    class="ObjectPage-anchorBar-0"
    role="navigation"
    style="top: 0px;"
  >
    <ui5-tabcontainer
      collapsed="true"
      fixed="true"
      show-overflow="true"
      tab-layout="Standard"
      tabs-placement="Top"
    />
    <ui5-popover
      horizontal-align="Center"
      no-arrow="true"
      placement-type="Bottom"
      vertical-align="Center"
    >
      <ui5-list
        mode="None"
        separators="All"
      />
    </ui5-popover>
  </section>
</div>
`;

exports[`ObjectPage Not crashing with 1 section - Default Mode 1`] = `
<div
  class="ObjectPage-objectPage-0 sapScrollBar"
  data-component-name="ObjectPage"
>
  <header
    aria-roledescription="Object Page header"
    class="ObjectPage-header-0"
    role="banner"
    style="padding-right: 12px;"
  >
    <span
      class="ObjectPage-actions-0"
    />
    <header
      class="ObjectPage-titleBar-0"
    >
      <div
        class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsCenter-0 FlexBox-flexWrapNoWrap-0"
      >
        <div
          class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionColumn-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsStretch-0 FlexBox-flexWrapNoWrap-0 ObjectPage-container-0"
        >
          <div
            class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsBaseline-0 FlexBox-flexWrapNoWrap-0"
          >
            <ui5-title
              class="ObjectPage-title-0"
              level="H3"
            />
            <ui5-label
              class="ObjectPage-subTitle-0"
            />
            <div
              class="ObjectPage-keyInfos-0"
            />
          </div>
        </div>
      </div>
    </header>
  </header>
  <div
    class="ObjectPage-contentHeader-0"
  />
  <section
    class="ObjectPage-anchorBar-0"
    role="navigation"
    style="top: 0px;"
  >
    <ui5-tabcontainer
      collapsed="true"
      fixed="true"
      show-overflow="true"
      tab-layout="Standard"
      tabs-placement="Top"
    >
      <ui5-tab
        data-index="0"
        data-section-id="1"
        selected="true"
        semantic-color="Default"
      />
    </ui5-tabcontainer>
    <ui5-popover
      horizontal-align="Center"
      no-arrow="true"
      placement-type="Bottom"
      vertical-align="Center"
    >
      <ui5-list
        mode="None"
        separators="All"
      />
    </ui5-popover>
  </section>
  <section
    data-component-name="ObjectPageSection"
    id="ObjectPageSection-1"
    role="region"
  >
    <div
      class="ObjectPageSection-header-0"
      role="heading"
    >
      <div
        class="ObjectPageSection-title-0 ObjectPageSection-uppercase-0"
      />
    </div>
    <div
      class="ObjectPageSection-sectionContent-0"
    >
      <div
        class="ObjectPageSection-sectionContentInner-0"
      >
        Test
      </div>
    </div>
  </section>
</div>
`;

exports[`ObjectPage Not crashing with 1 section - IconTabBar Mode 1`] = `
<div
  class="ObjectPage-objectPage-0 sapScrollBar ObjectPage-iconTabBarMode-0"
  data-component-name="ObjectPage"
>
  <header
    aria-roledescription="Object Page header"
    class="ObjectPage-header-0"
    role="banner"
    style="padding-right: 12px;"
  >
    <span
      class="ObjectPage-actions-0"
    />
    <header
      class="ObjectPage-titleBar-0"
    >
      <div
        class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsCenter-0 FlexBox-flexWrapNoWrap-0"
      >
        <div
          class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionColumn-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsStretch-0 FlexBox-flexWrapNoWrap-0 ObjectPage-container-0"
        >
          <div
            class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsBaseline-0 FlexBox-flexWrapNoWrap-0"
          >
            <ui5-title
              class="ObjectPage-title-0"
              level="H3"
            />
            <ui5-label
              class="ObjectPage-subTitle-0"
            />
            <div
              class="ObjectPage-keyInfos-0"
            />
          </div>
        </div>
      </div>
    </header>
  </header>
  <div
    class="ObjectPage-contentHeader-0"
  />
  <section
    class="ObjectPage-anchorBar-0"
    role="navigation"
    style="top: 0px;"
  >
    <ui5-tabcontainer
      collapsed="true"
      fixed="true"
      show-overflow="true"
      tab-layout="Standard"
      tabs-placement="Top"
    >
      <ui5-tab
        data-index="0"
        data-section-id="1"
        selected="true"
        semantic-color="Default"
      />
    </ui5-tabcontainer>
    <ui5-popover
      horizontal-align="Center"
      no-arrow="true"
      placement-type="Bottom"
      vertical-align="Center"
    >
      <ui5-list
        mode="None"
        separators="All"
      />
    </ui5-popover>
  </section>
  <section
    data-component-name="ObjectPageSection"
    id="ObjectPageSection-1"
    role="region"
  >
    <div
      class="ObjectPageSection-header-0"
      role="heading"
    >
      <div
        class="ObjectPageSection-title-0 ObjectPageSection-uppercase-0"
      />
    </div>
    <div
      class="ObjectPageSection-sectionContent-0"
    >
      <div
        class="ObjectPageSection-sectionContentInner-0"
      >
        Test
      </div>
    </div>
  </section>
</div>
`;

exports[`ObjectPage Only Sections 1`] = `
<div
  class="ObjectPage-objectPage-0 sapScrollBar"
  data-component-name="ObjectPage"
>
  <header
    aria-roledescription="Object Page header"
    class="ObjectPage-header-0"
    role="banner"
    style="padding-right: 12px;"
  >
    <span
      class="ObjectPage-actions-0"
    >
      <ui5-button
        design="Default"
      >
        Action
      </ui5-button>
    </span>
    <header
      class="ObjectPage-titleBar-0"
    >
      <div
        class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsCenter-0 FlexBox-flexWrapNoWrap-0"
      >
        <div
          class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionColumn-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsStretch-0 FlexBox-flexWrapNoWrap-0 ObjectPage-container-0"
        >
          <div
            class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsBaseline-0 FlexBox-flexWrapNoWrap-0"
          >
            <ui5-title
              class="ObjectPage-title-0"
              level="H3"
            >
              Fiori Object Page Title
            </ui5-title>
            <ui5-label
              class="ObjectPage-subTitle-0"
            >
              Sub Title
            </ui5-label>
            <div
              class="ObjectPage-keyInfos-0"
            />
          </div>
        </div>
      </div>
    </header>
  </header>
  <div
    class="ObjectPage-contentHeader-0"
  >
    <span
      class="ObjectPage-headerCustomContent-0"
    >
      <div
        style="display: flex; flex-direction: column;"
      >
        <ui5-link
          design="Default"
          href="https://www.sap.com"
        >
          www.myurl.com
        </ui5-link>
        <span
          class="Text-text-0"
        >
          Address 1
        </span>
        <span
          class="Text-text-0"
        >
          Address 2
        </span>
        <span
          class="Text-text-0"
        >
          Address 3
        </span>
      </div>
    </span>
  </div>
  <section
    class="ObjectPage-anchorBar-0"
    role="navigation"
    style="top: 0px;"
  >
    <ui5-tabcontainer
      collapsed="true"
      fixed="true"
      show-overflow="true"
      tab-layout="Standard"
      tabs-placement="Top"
    >
      <ui5-tab
        data-index="0"
        data-section-id="1"
        selected="true"
        semantic-color="Default"
        text="Test 1"
      />
      <ui5-tab
        data-index="1"
        data-section-id="2"
        semantic-color="Default"
        text="Test 2"
      />
      <ui5-tab
        data-index="2"
        data-section-id="3"
        semantic-color="Default"
        text="Test 3"
      />
    </ui5-tabcontainer>
    <ui5-popover
      horizontal-align="Center"
      no-arrow="true"
      placement-type="Bottom"
      vertical-align="Center"
    >
      <ui5-list
        mode="None"
        separators="All"
      />
    </ui5-popover>
  </section>
  <section
    data-component-name="ObjectPageSection"
    id="ObjectPageSection-1"
    role="region"
  >
    <div
      class="ObjectPageSection-header-0"
      role="heading"
    >
      <div
        class="ObjectPageSection-title-0 ObjectPageSection-uppercase-0"
      >
        Test 1
      </div>
    </div>
    <div
      class="ObjectPageSection-sectionContent-0"
    >
      <div
        class="ObjectPageSection-sectionContentInner-0"
      >
        <ui5-label>
          My Content 1
        </ui5-label>
      </div>
    </div>
  </section>
  <section
    data-component-name="ObjectPageSection"
    id="ObjectPageSection-2"
    role="region"
  >
    <div
      class="ObjectPageSection-header-0"
      role="heading"
    >
      <div
        class="ObjectPageSection-title-0 ObjectPageSection-uppercase-0"
      >
        Test 2
      </div>
    </div>
    <div
      class="ObjectPageSection-sectionContent-0"
    >
      <div
        class="ObjectPageSection-sectionContentInner-0"
      >
        <ui5-label>
          My Content 2
        </ui5-label>
      </div>
    </div>
  </section>
  <section
    data-component-name="ObjectPageSection"
    id="ObjectPageSection-3"
    role="region"
  >
    <div
      class="ObjectPageSection-header-0"
      role="heading"
    >
      <div
        class="ObjectPageSection-title-0 ObjectPageSection-uppercase-0"
      >
        Test 3
      </div>
    </div>
    <div
      class="ObjectPageSection-sectionContent-0"
    >
      <div
        class="ObjectPageSection-sectionContentInner-0"
      >
        <ui5-label>
          My Content 3
        </ui5-label>
      </div>
    </div>
  </section>
</div>
`;

exports[`ObjectPage Set selected section id 1`] = `
<div
  class="ObjectPage-objectPage-0 sapScrollBar ObjectPage-iconTabBarMode-0"
  data-component-name="ObjectPage"
>
  <header
    aria-roledescription="Object Page header"
    class="ObjectPage-header-0"
    role="banner"
    style="padding-right: 12px;"
  >
    <span
      class="ObjectPage-actions-0"
    />
    <header
      class="ObjectPage-titleBar-0"
    >
      <div
        class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsCenter-0 FlexBox-flexWrapNoWrap-0"
      >
        <div
          class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionColumn-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsStretch-0 FlexBox-flexWrapNoWrap-0 ObjectPage-container-0"
        >
          <div
            class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsBaseline-0 FlexBox-flexWrapNoWrap-0"
          >
            <ui5-title
              class="ObjectPage-title-0"
              level="H3"
            />
            <ui5-label
              class="ObjectPage-subTitle-0"
            />
            <div
              class="ObjectPage-keyInfos-0"
            />
          </div>
        </div>
      </div>
    </header>
  </header>
  <div
    class="ObjectPage-contentHeader-0"
  />
  <section
    class="ObjectPage-anchorBar-0"
    role="navigation"
    style="top: 0px;"
  >
    <ui5-tabcontainer
      collapsed="true"
      fixed="true"
      show-overflow="true"
      tab-layout="Standard"
      tabs-placement="Top"
    >
      <ui5-tab
        data-index="0"
        data-section-id="1"
        semantic-color="Default"
      />
      <ui5-tab
        data-index="1"
        data-section-id="2"
        selected="true"
        semantic-color="Default"
      />
    </ui5-tabcontainer>
    <ui5-popover
      horizontal-align="Center"
      no-arrow="true"
      placement-type="Bottom"
      vertical-align="Center"
    >
      <ui5-list
        mode="None"
        separators="All"
      />
    </ui5-popover>
  </section>
  <section
    data-component-name="ObjectPageSection"
    id="ObjectPageSection-2"
    role="region"
  >
    <div
      class="ObjectPageSection-header-0"
      role="heading"
    >
      <div
        class="ObjectPageSection-title-0 ObjectPageSection-uppercase-0"
      />
    </div>
    <div
      class="ObjectPageSection-sectionContent-0"
    >
      <div
        class="ObjectPageSection-sectionContentInner-0"
      >
        Test 2
      </div>
    </div>
  </section>
</div>
`;

exports[`ObjectPage With Subsections 1`] = `
<div
  class="ObjectPage-objectPage-0 sapScrollBar"
  data-component-name="ObjectPage"
>
  <header
    aria-roledescription="Object Page header"
    class="ObjectPage-header-0"
    role="banner"
    style="padding-right: 12px;"
  >
    <span
      class="ObjectPage-actions-0"
    >
      <ui5-button
        design="Default"
      >
        Action
      </ui5-button>
    </span>
    <header
      class="ObjectPage-titleBar-0"
    >
      <div
        class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsCenter-0 FlexBox-flexWrapNoWrap-0"
      >
        <div
          class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionColumn-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsStretch-0 FlexBox-flexWrapNoWrap-0 ObjectPage-container-0"
        >
          <div
            class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsBaseline-0 FlexBox-flexWrapNoWrap-0"
          >
            <ui5-title
              class="ObjectPage-title-0"
              level="H3"
            >
              Fiori Object Page Title
            </ui5-title>
            <ui5-label
              class="ObjectPage-subTitle-0"
            >
              Sub Title
            </ui5-label>
            <div
              class="ObjectPage-keyInfos-0"
            />
          </div>
        </div>
      </div>
    </header>
  </header>
  <div
    class="ObjectPage-contentHeader-0"
  >
    <span
      class="ObjectPage-headerCustomContent-0"
    >
      <div
        style="display: flex; flex-direction: column;"
      >
        <ui5-link
          design="Default"
          href="https://www.sap.com"
        >
          www.myurl.com
        </ui5-link>
        <span
          class="Text-text-0"
        >
          Address 1
        </span>
        <span
          class="Text-text-0"
        >
          Address 2
        </span>
        <span
          class="Text-text-0"
        >
          Address 3
        </span>
      </div>
    </span>
  </div>
  <section
    class="ObjectPage-anchorBar-0"
    role="navigation"
    style="top: 0px;"
  >
    <ui5-tabcontainer
      collapsed="true"
      fixed="true"
      show-overflow="true"
      tab-layout="Standard"
      tabs-placement="Top"
    >
      <ui5-tab
        data-index="0"
        data-section-id="1"
        selected="true"
        semantic-color="Default"
        text="Test 1"
      />
      <ui5-tab
        data-index="1"
        data-section-id="2"
        semantic-color="Default"
        text="Test 2"
      />
      <ui5-tab
        data-index="2"
        data-section-id="3"
        semantic-color="Default"
        text="Test 3"
      />
      <ui5-tab
        data-index="3"
        data-section-id="4"
        semantic-color="Default"
        text="Test 4"
      />
      <ui5-tab
        data-index="4"
        data-section-id="5"
        semantic-color="Default"
        text="Test 5"
      />
    </ui5-tabcontainer>
    <ui5-button
      class="ObjectPageAnchorBar-anchorBarActionButton-0 ObjectPageAnchorBar-anchorBarActionButtonExpandable-0"
      data-ui5wcr-object-page-header-action=""
      design="Default"
      icon="slim-arrow-down"
    />
    <ui5-popover
      horizontal-align="Center"
      no-arrow="true"
      placement-type="Bottom"
      vertical-align="Center"
    >
      <ui5-list
        mode="None"
        separators="All"
      />
    </ui5-popover>
  </section>
  <section
    data-component-name="ObjectPageSection"
    id="ObjectPageSection-1"
    role="region"
  >
    <div
      class="ObjectPageSection-header-0"
      role="heading"
    >
      <div
        class="ObjectPageSection-title-0 ObjectPageSection-uppercase-0"
      >
        Test 1
      </div>
    </div>
    <div
      class="ObjectPageSection-sectionContent-0"
    >
      <div
        class="ObjectPageSection-sectionContentInner-0"
      >
        <ui5-label>
          My Content 1
        </ui5-label>
      </div>
    </div>
  </section>
  <section
    data-component-name="ObjectPageSection"
    id="ObjectPageSection-2"
    role="region"
  >
    <div
      class="ObjectPageSection-header-0"
      role="heading"
    >
      <div
        class="ObjectPageSection-title-0 ObjectPageSection-uppercase-0"
      >
        Test 2
      </div>
    </div>
    <div
      class="ObjectPageSection-sectionContent-0"
    >
      <div
        class="ObjectPageSection-sectionContentInner-0"
      >
        <div
          style="height: 800px;"
        >
          Test2
        </div>
      </div>
    </div>
  </section>
  <section
    data-component-name="ObjectPageSection"
    id="ObjectPageSection-3"
    role="region"
  >
    <div
      class="ObjectPageSection-header-0"
      role="heading"
    >
      <div
        class="ObjectPageSection-title-0 ObjectPageSection-uppercase-0"
      >
        Test 3
      </div>
    </div>
    <div
      class="ObjectPageSection-sectionContent-0"
    >
      <div
        class="ObjectPageSection-sectionContentInner-0"
      >
        Test1
      </div>
    </div>
  </section>
  <section
    data-component-name="ObjectPageSection"
    id="ObjectPageSection-4"
    role="region"
  >
    <div
      class="ObjectPageSection-header-0"
      role="heading"
    >
      <div
        class="ObjectPageSection-title-0 ObjectPageSection-uppercase-0"
      >
        Test 4
      </div>
    </div>
    <div
      class="ObjectPageSection-sectionContent-0"
    >
      <div
        class="ObjectPageSection-sectionContentInner-0"
      >
        <h1>
          Section 4
        </h1>
        <div
          class="ObjectPageSubSection-objectPageSubSection-0"
          data-component-name="ObjectPageSubSection"
          id="ObjectPageSubSection-4.1"
          role="region"
        >
          <div
            class="ObjectPageSubSection-objectPageSubSectionHeaderTitle-0"
          >
            SubSection 4.1
          </div>
          <div
            class="ObjectPageSubSection-subSectionContent-0"
          >
            Test 4 SubSection 1
          </div>
        </div>
        <div
          class="ObjectPageSubSection-objectPageSubSection-0"
          data-component-name="ObjectPageSubSection"
          id="ObjectPageSubSection-4.2"
          role="region"
        >
          <div
            class="ObjectPageSubSection-objectPageSubSectionHeaderTitle-0"
          >
            SubSection 4.2
          </div>
          <div
            class="ObjectPageSubSection-subSectionContent-0"
          >
            Test 4 SubSection 2
          </div>
        </div>
      </div>
    </div>
  </section>
  <section
    data-component-name="ObjectPageSection"
    id="ObjectPageSection-5"
    role="region"
  >
    <div
      class="ObjectPageSection-header-0"
      role="heading"
    >
      <div
        class="ObjectPageSection-title-0 ObjectPageSection-uppercase-0"
      >
        Test 5
      </div>
    </div>
    <div
      class="ObjectPageSection-sectionContent-0"
    >
      <div
        class="ObjectPageSection-sectionContentInner-0"
      >
        <div
          class="ObjectPageSubSection-objectPageSubSection-0"
          data-component-name="ObjectPageSubSection"
          id="ObjectPageSubSection-5.1"
          role="region"
        >
          <div
            class="ObjectPageSubSection-objectPageSubSectionHeaderTitle-0"
          >
            SubSection 5.1
          </div>
          <div
            class="ObjectPageSubSection-subSectionContent-0"
          >
            Content of SubSection 5.1
          </div>
        </div>
        <div
          class="ObjectPageSubSection-objectPageSubSection-0"
          data-component-name="ObjectPageSubSection"
          id="ObjectPageSubSection-5.2"
          role="region"
        >
          <div
            class="ObjectPageSubSection-objectPageSubSectionHeaderTitle-0"
          >
            SubSection 5.2
          </div>
          <div
            class="ObjectPageSubSection-subSectionContent-0"
          >
            Content of SubSection 5.2
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;
